@@ -7,6 +7,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductService {
@@ -15,9 +16,10 @@ public class ProductService {
     private ProductRepository repository;
 
     public Product add(Product product) {
-        product.setCreatedAt(new Date()); // 👈 thêm dòng này
+        product.setCreatedAt(new Date());
         return repository.save(product);
     }
+
     public Product getById(Long id) {
         Product product = repository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Not found"));
@@ -34,8 +36,7 @@ public class ProductService {
                 .orElseThrow(() -> new RuntimeException("Not found"));
 
         product.setDeletedAt(new Date());
-
-        return repository.save(product); // 👈 trả về product
+        return repository.save(product);
     }
 
     public Product update(Long id, Product newProduct) {
@@ -46,33 +47,57 @@ public class ProductService {
         old.setType(newProduct.getType());
         old.setPrice(newProduct.getPrice());
         old.setQuantity(newProduct.getQuantity());
-        old.setSize(newProduct.getSize());     // 👈 thêm
-        old.setColor(newProduct.getColor());   // 👈 thêm
-
-        old.setUpdatedAt(new Date()); // 👈 QUAN TRỌNG
+        old.setSize(newProduct.getSize());
+        old.setColor(newProduct.getColor());
+        old.setUpdatedAt(new Date());
 
         return repository.save(old);
     }
 
     public List<Product> filter(String name, Double min, Double max) {
         List<Product> list = repository.findAll();
-// 👇 thêm đoạn này NGAY SAU findAll()
+
+        // Lọc bỏ sản phẩm đã xóa
         list = list.stream()
                 .filter(p -> p.getDeletedAt() == null)
-                .toList();
+                .collect(Collectors.toList());
 
-        if (name != null) {
+        // Lọc theo tên (contains, không phân biệt hoa thường)
+        if (name != null && !name.trim().isEmpty()) {
             list = list.stream()
-                    .filter(p -> p.getName().toLowerCase().contains(name.toLowerCase()))
-                    .toList();
+                    .filter(p -> p.getName() != null &&
+                            p.getName().toLowerCase().contains(name.toLowerCase()))
+                    .collect(Collectors.toList());
         }
 
-        if (min != null && max != null) {
+        // Lọc theo giá
+        if (min != null) {
             list = list.stream()
-                    .filter(p -> p.getPrice() >= min && p.getPrice() <= max)
-                    .toList();
+                    .filter(p -> p.getPrice() >= min)
+                    .collect(Collectors.toList());
+        }
+
+        if (max != null) {
+            list = list.stream()
+                    .filter(p -> p.getPrice() <= max)
+                    .collect(Collectors.toList());
         }
 
         return list;
+    }
+
+    public List<Product> getAll() {
+        return repository.findAll().stream()
+                .filter(p -> p.getDeletedAt() == null)
+                .collect(Collectors.toList());
+    }
+    // Thêm phương thức này vào ProductService.java
+    public boolean checkStock(Long productId, int quantity) {
+        try {
+            Product product = getById(productId);
+            return product.getQuantity() >= quantity;
+        } catch (Exception e) {
+            return false;
+        }
     }
 }
